--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,8 @@ python_functions = test_*
 addopts = -v --tb=short
 log_cli = true
 log_cli_level = INFO
+log_file = logs/test/test.log
+log_file_level = DEBUG
 
 env =
     DATABASE_URL=postgresql://bospace_user:4YP123456@localhost:5432/test_db
