unit test and bug fixing for dataset and model objects

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,6 @@ log_cli = true
 log_cli_level = INFO
 log_file = logs/test/test.log
 log_file_level = DEBUG
+
+markers =
+    no_db: Mark tests that do not require database setup.
