--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,9 @@ dependencies:
   - psycopg2
   - xgboost
   - pytest
+  - redis
+  - celery
+  - fastapi
   - pip: 
       - gpytorch
       - botorch
